edit navigation bar

--- a/index.html
+++ b/index.html
@@ -38,23 +38,16 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="index.html">Digital Media Technology of BUPT</a>
+	      <a class="navbar-brand" href="index.html">数字媒体技术@BUPT</a>
 	    </div>
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
-	        <li class="active"><a href="#">Features <span class="sr-only">(current)</span></a></li>
-	        <li><a href="history.html">History</a></li>
-	        <li><a href="works.html">Works</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
-	          <ul class="dropdown-menu" role="menu">
-	            <li><a href="teachers.html">Teachers</a></li>
-	            <li><a href="study.html">Study Plan</a></li>
-	            <li class="divider"></li>
-	            <li><a href="contact.html">Contact</a></li>
-	          </ul>
-	        </li>
+	        <li><a href="history.html">历史沿革</a></li>
+	        <li><a href="works.html">学生作品</a></li>
+            <li><a href="teachers.html">教师队伍</a></li>
+	        <li><a href="study.html">培养方案</a></li>
+	       	<li><a href="contact.html">关于</a></li>
 	      </ul>
 	    </div>
 	  </div>
@@ -64,9 +57,9 @@
     <header>
         <div class="container">
             <div class="jumbotron">
-			  <h1>DMT History</h1>
-			  <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-			  <p><a href="history.html" class="btn btn-primary btn-lg">Learn more</a></p>
+			  <h1>数字媒体技术</h1>
+			  <p>我们培养具备扎实的信号处理基础理论和专业知识，熟悉数字内容创作流程，掌握数字媒体技术，具有数字媒体系统开发与数字内容制作能力，品德优良、知识面宽、具有创新精神和基本艺术素养的高素质专业人才。毕业生能在互联网和数字内容产业从事数字内容制作、研究开发和技术管理等工作。</p>
+			  <p><a href="history.html" class="btn btn-primary btn-lg">查看更多</a></p>
 			</div>
         </div>
     </header>
@@ -76,7 +69,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>FEATURES</h2>
+                    <h2>专业特色</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -150,7 +143,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Works</h2>
+                    <h2>学生培养</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -163,7 +156,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="works.html" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download">More</i> 
+                        <i class="fa fa-download">更多</i> 
                     </a>
                 </div>
             </div>
@@ -176,32 +169,26 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <h3><a href="http://sdmda.bupt.edu.cn">数字媒体与设计艺术学院</a></h3>
+                        <p>北京邮电大学<br>北京市海淀区西土城路10号</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>分享</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-weibo"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-wechat"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-renren"></i></a>
+                            </li>                           
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3></h3>
+                        <p>"我们探索新兴的技术与艺术相结合的交叉邻域，是国内首批授予工学学位的数字媒体专业。"</p>
                     </div>
                 </div>
             </div>
@@ -210,7 +197,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; DMT 2011
+                        Copyright &copy; DMT 2015
+                    </div>
+                    <div class="col-lg-12">
+                        Powered by <a href="http://startbootstrap.com">Bootstrap</a>.
                     </div>
                 </div>
             </div>
