--- a/history.html
+++ b/history.html
@@ -40,27 +40,21 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="index.html">Digital Media Technology of BUPT</a>
+	      <a class="navbar-brand" href="index.html">数字媒体技术@BUPT</a>
 	    </div>
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav navbar-right">	        
-	        <li><a href="index.html">Features</a></li>
-	        <li class="active"><a href="#">History <span class="sr-only">(current)</span></a></li>
-	        <li><a href="works.html">Works</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
-	          <ul class="dropdown-menu" role="menu">
-	            <li><a href="teachers.html">Teachers</a></li>
-	            <li><a href="study.html">Study Plan</a></li>
-	            <li class="divider"></li>
-	            <li><a href="contact.html">Contact</a></li>
-	          </ul>
-	        </li>
+	      <ul class="nav navbar-nav navbar-right">
+	        <li class="active"><a href="history.html">历史沿革</a></li>
+	        <li><a href="works.html">学生作品</a></li>
+            <li><a href="teachers.html">教师队伍</a></li>
+	        <li><a href="study.html">培养方案</a></li>
+	       	<li><a href="contact.html">关于</a></li>
 	      </ul>
 	    </div>
 	  </div>
 	</nav>
+    
 	<!-- History -->
 	<header>
         <div class="container">
