--- a/history.html
+++ b/history.html
@@ -45,11 +45,11 @@
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
+          	<li><a href="index.html">主页</a></li>
 	        <li class="active"><a href="history.html">历史沿革</a></li>
 	        <li><a href="works.html">学生作品</a></li>
             <li><a href="teachers.html">教师队伍</a></li>
 	        <li><a href="study.html">培养方案</a></li>
-	       	<li><a href="contact.html">关于</a></li>
 	      </ul>
 	    </div>
 	  </div>
@@ -253,27 +253,27 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <h3></h3>
+                        <p>"我们探索新兴的技术与艺术相结合的交叉邻域，是国内首批授予工学学位的数字媒体专业。"</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>分享</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-weibo"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-wechat"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-renren"></i></a>
+                            </li>                           
                         </ul>
                     </div>
+                    
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3><a href="http://sdmda.bupt.edu.cn">数字媒体与设计艺术学院</a></h3>
+                        <p>北京邮电大学<br>北京市海淀区西土城路10号</p>
                     </div>
                 </div>
             </div>
@@ -282,7 +282,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; DMT 2011
+                        Copyright &copy; DMT 2015
+                    </div>
+                    <div class="col-lg-12">
+                        Powered by <a href="http://getbootstrap.com/">Bootstrap</a>.
                     </div>
                 </div>
             </div>
