--- a/works.html
+++ b/works.html
@@ -45,11 +45,11 @@
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
+          	<li><a href="index.html">主页</a></li>
 	        <li><a href="history.html">历史沿革</a></li>
 	        <li class="active"><a href="works.html">学生作品</a></li>
             <li><a href="teachers.html">教师队伍</a></li>
 	        <li><a href="study.html">培养方案</a></li>
-	       	<li><a href="contact.html">关于</a></li>
 	      </ul>
 	    </div>
 	  </div>
@@ -60,6 +60,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center title-adjust">
+                	<h2 class="bg-danger">ATTENTION !请将此页面改写为学生作品展示! </h2>
+                    <p class="bg-warning">1.第一个TEST VIDEO 是HTML5播放器的测试，存在的一个BUG是关闭某个视频标签时，视频不会自行暂停<br>
+                    2.最好都是修改成这样的样式，一张封面图片，内部有视频和介绍<br>
+                    3.带有后台添加和修改</p>
                     <h2>Works</h2>
                     <hr class="star-primary">
                 </div>
@@ -70,7 +74,7 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
-                                <h3>BUPT VIDEO</h3>
+                                <h3>TEST VIDEO</h3>
                             </div>
 
                         </div>
@@ -135,8 +139,8 @@
     </section>
 
     <div class="container align-right">
-        <div class="row title-adjust">
-            <a href="#" class="btn btn-primary btn-lg">More...</a>
+        <div class="row title-adjust bg-warning">
+            <p>作品数量较多，该按钮可改为导航栏</p><a href="#" class="btn btn-primary btn-lg">More...</a>
         </div>
     </div>
 	
@@ -146,32 +150,27 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <h3></h3>
+                        <p>"我们探索新兴的技术与艺术相结合的交叉邻域，是国内首批授予工学学位的数字媒体专业。"</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>分享</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-weibo"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-wechat"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-renren"></i></a>
+                            </li>                           
                         </ul>
                     </div>
+                    
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3><a href="http://sdmda.bupt.edu.cn">数字媒体与设计艺术学院</a></h3>
+                        <p>北京邮电大学<br>北京市海淀区西土城路10号</p>
                     </div>
                 </div>
             </div>
@@ -180,7 +179,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; DMT 2011
+                        Copyright &copy; DMT 2015
+                    </div>
+                    <div class="col-lg-12">
+                        Powered by <a href="http://getbootstrap.com/">Bootstrap</a>.
                     </div>
                 </div>
             </div>
@@ -207,14 +209,14 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2 class="bg-warning">TEST VIDEO（作品名称）</h2>
                             <hr class="star-primary">
                             <video width="100%" controls>
                               <source src="video/testvideo.mp4" type="video/mp4">
                               <source src="img/video/bupt.mp4" type="img/jpg">
                               Your browser does not support HTML5 video.
                             </video>
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p class="bg-warning">(此处填写作者信息以及内容介绍)</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
